[package]
name = "google-oauth2-rust"
version = "0.1.0"
edition = "2021"


[dependencies]
actix-web = "4.3.1"
anyhow = "1.0.71"
dotenv = "0.15.0"
futures = "0.3.28"
oauth2 = "4.4.1"
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.96"
url = { version = "2.1", features = ["serde"] }
