[package]
name = "google-oauth2-rust"
version = "0.1.0"
edition = "2021"


[dependencies]
actix-web = "4.3.1"
anyhow = "1.0.71"
dotenv = "0.15.0"
features = "0.10.0"
futures = "0.3.28"
json = "0.12.4"
oauth2 = "4.4.1"
reqwest = { version = "0.11.18", features = ["json"] }
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.96"
url = { version = "2.1", features = ["serde"] }
